[package]
name = "rust-cpu-profiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
rust-cpu-profiler-common = { path = "../rust-cpu-profiler-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.2"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal",] }
blazesym = "0.2.0-alpha.11"
inferno = "0.11.19"

[[bin]]
name = "rust-cpu-profiler"
path = "src/main.rs"

[lib]
name = "symbol_resolver"
path = "src/symbol_resolver.rs" 
